Create bare portfolio

--- a/package.json
+++ b/package.json
@@ -6,12 +6,36 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start": "react-native start",
+    "start": "npm run clean:watchman && react-native start",
+    "clean": "watchman watch-del-all && yarn cache clean --force && rm -rf node_modules/ rm -rf $TMPDIR/metro-* && yarn && cd android && ./gradlew clean && cd ..",
+    "clean:git": "git clean -fxd && yarn install && cd ios && pod install && cd ..",
+    "clean:ios": "rm -rf node_modules/ && yarn && cd ios && rm -rf Pods/ Podfile.lock && pod install && cd ..",
+    "clean:watchman": "watchman watch-del . ; watchman watch-project .",
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
+    "i18next": "^23.11.5",
     "react": "18.2.0",
-    "react-native": "0.74.2"
+    "react-i18next": "^14.1.2",
+    "react-native": "0.74.2",
+    "react-native-config": "^1.5.1",
+    "react-native-gesture-handler": "^2.16.2",
+    "react-native-localize": "^3.2.0",
+    "react-native-reanimated": "^3.12.0",
+    "react-native-safe-area-context": "^4.10.4",
+    "react-native-screens": "^3.31.1",
+    "react-native-svg": "^15.3.0",
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-video": "^6.2.0",
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -22,12 +46,21 @@
     "@react-native/metro-config": "0.74.84",
     "@react-native/typescript-config": "0.74.84",
     "@types/react": "^18.2.6",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-svg-transformer": "^1.4.0",
     "react-test-renderer": "18.2.0",
+    "reactotron-react-native": "^5.1.7",
+    "reactotron-redux": "^3.1.9",
     "typescript": "5.0.4"
   },
   "engines": {
