--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "0.74.2",
     "react-native-config": "^1.5.1",
     "react-native-gesture-handler": "^2.16.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-localize": "^3.2.0",
     "react-native-reanimated": "^3.12.0",
     "react-native-safe-area-context": "^4.10.4",
